--- a/style/pages.css
+++ b/style/pages.css
@@ -302,7 +302,7 @@
     flex-direction: column;
     position: relative;
     color: white;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.8);
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 
 }
 
@@ -321,7 +321,7 @@ input[type="radio"] {
     height: 25px;
     width: 25px;
     border-radius: 50%;
-    border: 2px green solid;
+    border: 2px rgb(0, 114, 0) solid;
     position: absolute;
     z-index: -1;
 }
@@ -335,7 +335,7 @@ input[type="radio"] {
     content: "";
     height: 25px;
     width: 25px;
-    background-color: green;
+    background-color: rgb(0, 114, 0);
     border-radius: 50%;
     color: white;
     display: block;
@@ -391,6 +391,10 @@ input[type="radio"] {
 
 @media (max-width: 480px) and (min-width:280px) {
     .controls .right hr:nth-child(2) {
+        display: none;
+    }
+
+    .controls .right .piece {
         display: none;
     }
 
