--- a/style/register.css
+++ b/style/register.css
@@ -11,14 +11,79 @@ body {
 }
 
 section {
-    width: 75vw;
-    height: 75vh;
+    width: 480px;
+    height: 480px;
+    min-height: 240px;
+    min-width: 240px;
     background-color: #f8f8f8;
-    display: grid;
-    grid-template-columns: 6fr 6fr;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+    margin: 32px;
 }
 
-section .left {}
+section .left {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 100%;
+}
 
-section .right {}
+section .left form {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    width: 80%;
+    gap: 32px;
+
+}
+
+section .left form input {
+    outline: none;
+    border: 2px gray solid;
+    height: 32px;
+    width: 100%;
+
+}
+
+section .left form .g-signin2 {
+    width: 70%;
+
+}
+
+section .left form input::placeholder {
+    padding: 20px;
+}
+
+section .left form button {
+    border: none;
+    outline: none;
+    width: 70%;
+    height: 35px;
+    background-color: white;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.16);
+    color: gray;
+    position: relative;
+    cursor: pointer;
+    transition: 400ms ease-in-out;
+}
+
+section .left form button::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    transition: all 160ms ease-in-out;
+    width: 100%;
+    z-index: 100;
+    height: 35px;
+}
+
+section .left form button:hover:before {
+    width: 100%;
+    height: 35px;
+    box-shadow: 0px 0px 8px rgba(66, 133, 244, 0.6);
+}
